resources/assets/stylesheets/scss/responsive.scss
/* ... */
#responsive-navigation-items {
    background-color: $base-color;
    left: 0;
    max-height: calc(100vh - $header-bar-container-height - 5px);
    max-width: $responsive-menu-width;
    overflow-y: auto;
    padding-bottom: 5px;
    position: fixed;
    top: 40px;

    /* Safari only */
    @media not all and (min-resolution: .001dpcm) {
        @supports (-webkit-appearance: none) {
            top: 43px;
        }
    }

    width: $responsive-menu-width;

    @media not prefers-reduced-motion {
        transition: all $transition-duration ease-in-out;
    }

    header {
        background-image: url("#{$image-path}/sidebar/noicon-sidebar.png");
        background-size: cover;
        display: flex;
        flex-wrap: wrap;
        max-height: 250px;
        overflow-y: auto;
        padding: 10px;

        .profile-info {
            flex: auto;
            font-size: $font-size-small;
            padding: 20px;
            position: relative;

            .profile-pic {
                width: 100%;

                img,
                svg {
                    cursor: pointer;
                    height: 50px;
                    width: 50px;
                }
            }
        }

        > div {
            display: flex;
            width: 100%;

            .avatar-navigation {
                flex: auto;
                padding-left: 10px;

                .navigation-item {
                    background-color: transparent;

                    &:hover {
                        background-color: $base-color-80;
                    }
                }
            }
        }

        .open-avatarmenu,
        .close-avatarmenu {
            button {
                cursor: pointer;
                position: relative;
                top: calc(50% - 12px);
            }
        }
    }

    .main-navigation {
        margin: 0 5px;
        padding: 0 5px;
    }

    .navigation-item {
        background-color: $base-color;
        display: flex;
        flex-wrap: wrap;
        list-style-type: none;
        margin: 0px;

        &:not(:last-child) {
            border-bottom: 1px solid $white;
        }

        &.navigation-up,
        &.navigation-current {
            .navigation-icon {
                img {
                    padding-top: 0;
                }
            }

            .navigation-title {
                padding: 10px 10px 10px 0;
            }

            &:hover {
                background-color: $base-color-80;
            }

        }

        &.navigation-item-active {
            background-color: $base-color-80;
        }

        a {
            color: $white;
            cursor: pointer;
        }

        button {
            color: $white;
            cursor: pointer;
            display: flex;
            flex: 0;
            text-align: center;
            width: 100%;

            img,
            svg {
                padding-top: 12px;
            }

            &.navigation-in {
                border-left: 1px solid $base-color-60;
            }
        }

        &:not(.navigation-current):not(.navigation-up) {
            button:hover {
                background-color: $base-color-80;
            }
        }

    }

    .navigation-title {
        color: $white;
        flex: 1;

        > a {
            display: inline-block;
            padding: 10px 10px 10px 5px;
            text-align: left;
            width: calc(100% - 15px);

            .navigation-icon {
                flex: 0;
                width: 35px;
            }

            .navigation-text {
                flex: 1;
                padding-top: 2px;
            }

        }

        img,
        svg {
            vertical-align: text-bottom;
            margin-right: 10px;
        }

    }

    a {
        flex: 0;

        &:hover {
            background-color: $base-color-80;
        }

    }

    img, svg {
        vertical-align: text-bottom;
    }
}

#responsive-contentbar-container {
    position: fixed;
    width: 100vw;
    z-index: 1000;
}
/* ... */

